force-app/main/default/objects/Grant__c/Grant__c.object-meta.xml
<CustomObject>
    <description>Grant applications and awards. Tracks pipeline (researching -> drafting -> submitted -> awarded/declined), amounts requested vs awarded, grant period, and reporting due dates. Per the Drive crawl: SFTS works with BRCF, Wortman Family Foundation, Tindall Farm Trust, State Farm, United Way, and others — each with separate deadlines and reporting cadences.</description>
    <label>Grant</label>
    <nameField>
        <label>Grant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>