force-app/main/default/objects/Grant__c/fields/Amount_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Amount_Awarded__c</fullName>
    <description>Dollar amount actually awarded. May differ from Amount_Requested.</description>
    <label>Amount Awarded</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>