force-app/main/default/objects/Grant__c/fields/Amount_Requested__c.field-meta.xml
<CustomField>
    <fullName>Amount_Requested__c</fullName>
    <description>Dollar amount asked for.</description>
    <label>Amount Requested</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>