force-app/main/default/objects/Grant__c/fields/Application_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Application_Deadline__c</fullName>
    <description>When the grant application is due. Critical for forward planning.</description>
    <label>Application Deadline</label>
    <type>Date</type>
</CustomField>