force-app/main/default/objects/Grant__c/fields/Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>Decision_Date__c</fullName>
    <description>When the funder communicated their decision (awarded or declined).</description>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>