force-app/main/default/objects/Grant__c/fields/Funder__c.field-meta.xml
<CustomField>
    <fullName>Funder__c</fullName>
    <description>Name of the funder organization (foundation, government agency, corporation). Free-text for now; future enhancement: lookup to a Funder custom object once we have repeat funders to track over time.</description>
    <label>Funder</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>