force-app/main/default/objects/Grant__c/fields/Grant_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Grant_Period_End__c</fullName>
    <description>End of the period the grant funds are designated to cover.</description>
    <label>Grant Period End</label>
    <type>Date</type>
</CustomField>