force-app/main/default/objects/Grant__c/fields/Grant_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Grant_Period_Start__c</fullName>
    <description>Start of the period the grant funds are designated to cover.</description>
    <label>Grant Period Start</label>
    <type>Date</type>
</CustomField>