force-app/main/default/objects/Grant__c/fields/Grant_Type__c.field-meta.xml
<CustomField>
    <fullName>Grant_Type__c</fullName>
    <description>What this grant funds.</description>
    <label>Grant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>General Operating</fullName><default>false</default><label>General Operating</label></value>
            <value><fullName>Program</fullName><default>false</default><label>Program</label></value>
            <value><fullName>Emergency / Crisis Response</fullName><default>false</default><label>Emergency / Crisis Response</label></value>
            <value><fullName>Capital / Facility</fullName><default>false</default><label>Capital / Facility</label></value>
            <value><fullName>Capacity Building</fullName><default>false</default><label>Capacity Building</label></value>
            <value><fullName>In-Kind</fullName><default>false</default><label>In-Kind</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>