force-app/main/default/objects/Grant__c/fields/Reporting_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Due_Date__c</fullName>
    <description>When the funder requires a report on how the grant funds were used. Missing these can disqualify SFTS from future awards.</description>
    <inlineHelpText>If recurring, enter the next due date. Update after each report is submitted.</inlineHelpText>
    <label>Reporting Due Date</label>
    <type>Date</type>
</CustomField>