force-app/main/default/objects/Grant__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Grant pipeline status.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Researching</fullName><default>true</default><label>Researching</label></value>
            <value><fullName>LOI Submitted</fullName><default>false</default><label>LOI Submitted</label></value>
            <value><fullName>Drafting</fullName><default>false</default><label>Drafting</label></value>
            <value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value>
            <value><fullName>Awarded</fullName><default>false</default><label>Awarded</label></value>
            <value><fullName>Declined</fullName><default>false</default><label>Declined</label></value>
            <value><fullName>In Progress</fullName><default>false</default><label>In Progress (Active)</label></value>
            <value><fullName>Reporting Due</fullName><default>false</default><label>Reporting Due</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>