force-app/main/default/objects/Grant__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>When we actually submitted the application.</description>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>