force-app/main/default/objects/Grant__c/validationRules/Amount_Awarded_Required_When_Awarded.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Awarded_Required_When_Awarded</fullName>
    <active>true</active>
    <description>Awarded grants without amount data break fundraising reporting.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, "Awarded"), ISBLANK(Amount_Awarded__c))</errorConditionFormula>
    <errorMessage>When marking a grant Awarded, please enter the Amount Awarded.</errorMessage>
</ValidationRule>