force-app/main/default/objects/Grant__c/listViews/Awarded_Active.listView-meta.xml
<ListView>
    <fullName>Awarded_Active</fullName>
    <columns>NAME</columns>
    <columns>Funder__c</columns>
    <columns>Amount_Awarded__c</columns>
    <columns>Grant_Period_End__c</columns>
    <columns>Reporting_Due_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awarded,In Progress,Reporting Due</value>
    </filters>
    <label>Awarded - Active</label>
</ListView>