force-app/main/default/objects/Grant__c/listViews/Reporting_Due_Soon.listView-meta.xml
<ListView>
    <fullName>Reporting_Due_Soon</fullName>
    <columns>NAME</columns>
    <columns>Funder__c</columns>
    <columns>Reporting_Due_Date__c</columns>
    <columns>Amount_Awarded__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reporting_Due_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:60</value>
    </filters>
    <label>Reporting Due Soon (Next 60 Days)</label>
</ListView>