force-app/main/default/objects/Grant__c/listViews/Upcoming_Deadlines.listView-meta.xml
<ListView>
    <fullName>Upcoming_Deadlines</fullName>
    <columns>NAME</columns>
    <columns>Funder__c</columns>
    <columns>Application_Deadline__c</columns>
    <columns>Status__c</columns>
    <columns>Amount_Requested__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Deadline__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:90</value>
    </filters>
    <label>Upcoming Deadlines (Next 90 Days)</label>
</ListView>